# MNM

./: README.md  backend.py  feedback.csv  feedback_parser.ipynb  frontendspoof.py  lib.py  pyproject.toml
