[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "iprogress>=0.4",
    "ipykernel>=6.29.5",
    "jax>=0.6.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "openai>=1.84.0",
    "pandas>=2.3.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
]
